Fix scroll overflow bug

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -90,7 +90,7 @@ h2 {
 
 .past-booking-cards-container,
 .current-booking-cards-container,
-.future-bookings-cards-container {
+.future-booking-cards-container {
   overflow-y: scroll;
 }
 /* .future-bookings::-webkit-scrollbar,
@@ -100,8 +100,8 @@ h2 {
 } */
 
 .past-booking-cards-container::-webkit-scrollbar,
-.past-booking-cards-container::-webkit-scrollbar,
-.past-booking-cards-container::-webkit-scrollbar {
+.current-booking-cards-container::-webkit-scrollbar,
+.future-booking-cards-container::-webkit-scrollbar {
   width: 10%;
 }
 /* add inner box shadow it will look more scrollable */
